2012-03-18  Mike Frysinger  <vapier@gentoo.org>

	* se_all16bitopcodes.S: Merge code from se_all32bitopcodes.S.

2011-09-28  Mike Frysinger  <vapier@gentoo.org>

	* vit_max2.s: New tests for parallel VIT_MAX insns.

2011-06-18  Robin Getz  <robin.getz@analog.com>

	* random_0019.S, random_0020.S, random_0021.S, random_0022.S,
	random_0023.S, random_0024.S, random_0026.S, random_0027.S,
	random_0028.S, random_0029.S, random_0030.S, random_0032.S,
	random_0035.S: New tests for dsp insns.

2011-06-04  Mike Frysinger  <vapier@gentoo.org>

	* .gitignore, 10272_small.s, 10436.s, 10622.s, 10742.s, 10799.s,
	11080.s, 7641.s, a0.s, a0shift.S, a10.s, a11.S, a12.s, a1.s, a20.S,
	a21.s, a22.s, a23.s, a24.s, a25.s, a26.s, a2.s, a30.s, a3.s, a4.s,
	a5.s, a6.s, a7.s, a8.s, a9.s, abs-2.S, abs-3.S, abs-4.S, abs_acc.s,
	abs.S, acc-rot.s, acp5_19.s, acp5_4.s, add_imm7.s, add_shift.S,
	add_sub_acc.s, addsub_flags.S, algnbug1.s, algnbug2.s, allinsn.exp,
	argc.c, ashift_flags.s, ashift.s, b0.S, b1.s, b2.S, brcc.s, brevadd.s,
	byteop16m.s, byteop16p.s, byteop1p.s, byteop2p.s, byteop3p.s,
	byteunpack.s, c_alu2op_arith_r_sft.s, c_alu2op_conv_b.s,
	c_alu2op_conv_h.s, c_alu2op_conv_mix.s, c_alu2op_conv_neg.s,
	c_alu2op_conv_toggle.s, c_alu2op_conv_xb.s, c_alu2op_conv_xh.s,
	c_alu2op_divq.s, c_alu2op_divs.s, c_alu2op_log_l_sft.s,
	c_alu2op_log_r_sft.s, c_alu2op_shadd_1.s, c_alu2op_shadd_2.s,
	c_brcc_bp1.s, c_brcc_bp2.s, c_brcc_bp3.s, c_brcc_bp4.s,
	c_brcc_brf_bp.s, c_brcc_brf_brt_bp.s, c_brcc_brf_brt_nbp.s,
	c_brcc_brf_fbkwd.s, c_brcc_brf_nbp.s, c_brcc_brt_bp.s,
	c_brcc_brt_nbp.s, c_brcc_kills_dhits.s, c_brcc_kills_dmiss.s,
	c_br_preg_killed_ac.s, c_br_preg_killed_ex1.s, c_br_preg_stall_ac.s,
	c_br_preg_stall_ex1.s, cc0.s, cc1.s, cc5.S, c_cactrl_iflush_pr_pp.s,
	c_cactrl_iflush_pr.s, c_calla_ljump.s, c_calla_subr.s, cc-alu.S,
	cc-astat-bits.s, c_cc2dreg.s, c_cc2stat_cc_ac.S, c_cc2stat_cc_an.s,
	c_cc2stat_cc_aq.s, c_cc2stat_cc_av0.S, c_cc2stat_cc_av1.S,