@@ -1,3 +1,7 @@
+2012-03-19  Robin Getz  <robin.getz@analog.com>
+
+	* random_0014.S, random_0015.S, random_0016.S: New tests for shifts.
+
 2012-03-18  Mike Frysinger  <vapier@gentoo.org>
 
 	* se_all16bitopcodes.S: Merge code from se_all32bitopcodes.S.
